--- a/src/components/organisms/CourseListItem/style.module.css
+++ b/src/components/organisms/CourseListItem/style.module.css
@@ -4,6 +4,7 @@
     border: 1px solid var(--header-bg-color);
     border-radius: 15px;
     padding: 10px;
+    margin-bottom: 20px;
 }
 
 .course_list_item__image {
